Rule components/src/objects/Rule__c.object
<CustomObject>
    <fields>
        <fullName>ENS_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ENS_System</label>
        <referenceTo>System__c</referenceTo>
        <relationshipLabel>Rules</relationshipLabel>
        <relationshipName>Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>This field will signify the object name.</description>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Condition__c</fullName>
        <description>&quot;This field will contain the logical operators for the rule. It supports only 1 level 
e.g. - ((1 OR 2) AND (3 OR 5) OR (6 AND 7))&quot;</description>
        <label>Rule Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_Name__c</fullName>
        <description>This field will signify the topic name</description>
        <label>Topic Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TriggerEvents__c</fullName>
        <label>TriggerEvents</label>
        <picklist>
            <picklistValues>
                <fullName>before insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>before update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>before delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>after insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>after update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>after delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>after undelete</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Object_Name__c</columns>
        <columns>Rule_Condition__c</columns>
        <columns>Topic_Name__c</columns>
        <columns>TriggerEvents__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>